# frontall

./: .editorconfig  .gitignore  App.xaml.cs  CMakeLists.txt  HelloUwp.csproj  HelloUwp.sln  HelloUwp_TemporaryKey.pfx  HelloWpf.csproj  HelloWpf.sln  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  build.bat  build.sh  build_bin.sh  build_library.sh  factorial.js  login.glade  main.c  main.cpp  package-lock.json  package.json
HelloWpf/: App.xaml  App.xaml.cs  HelloWpf.csproj  MainWindow.xaml  MainWindow.xaml.cs
HelloWpf/Properties/: Resources.Designer.cs
Properties/: AssemblyInfo.cs  Default.rd.xml  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
